@@ -1,3 +1,6 @@
+Thu Sep 13 08:57:26 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/tds/unittests/dynamic1.c: use tds_set_param_type
+
 Thu Sep 06 13:15:54 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* doc/tds.html: update for tds9
 	* src/tds/read.c: work if initial in_pos is != 0
